--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                     <div class="container-fluid container-custom">
                         <div class="row">
                             <div class="col-sm-12">
-                                <h2>Random Stuff I Personally Recommend :)</h2>
+                                <h2>Random stuff I personally recommend...</h2>
                                 <hr class="m-b-50">
                                 <!-- Tabs-->
                                 <ul class="nav nav-tabs">
