--- a/index.html
+++ b/index.html
@@ -156,10 +156,11 @@
                                 <hr class="m-b-50">
                                 <!-- Tabs-->
                                 <ul class="nav nav-tabs">
-                                    <li class="active"><a href="#tab-1" data-toggle="tab">Books</a></li>
+                                    <li class="active"><a href="#tab-101" data-toggle="tab">Books</a></li>
+                                    <li><a href="#tab-102" data-toggle="tab">Coffee</a></li>
                                 </ul>
                                 <div class="tab-content">
-                                    <div class="tab-pane in active" id="tab-1">
+                                    <div class="tab-pane in active" id="tab-101">
                                         <h3>Non-Tech</h3>
                                         <ul>
                                             <li>- Company of One by Paul Jarvis</li>
@@ -171,6 +172,21 @@
                                         <ul>
                                             <li>- The Passionate Programmer by Chad Fowler</li>
                                             <li>- Soft Skills: The Software Developer's Life Manual by John Sonmez</li>
+                                        </ul>
+                                    </div>
+                                    <div class="tab-pane" id="tab-102">
+                                        <h3>Beans</h3>
+                                        <ul>
+                                            <li>- Kenya</li>
+                                            <li>- Kilimanjaro</li>
+                                            <li>- Colombia</li>
+                                            <li>- Mt. Apo</li>
+                                            <li>- Sagada</li>
+                                        </ul>
+
+                                        <h3>Cold Coffee Drinks</h3>
+                                        <ul>
+                                            <li>- Dirty Horchata</li>
                                         </ul>
                                     </div>
                                 </div>
