Update landing page

--- a/index.html
+++ b/index.html
@@ -158,6 +158,7 @@
                                 <ul class="nav nav-tabs">
                                     <li class="active"><a href="#tab-101" data-toggle="tab">Books</a></li>
                                     <li><a href="#tab-102" data-toggle="tab">Coffee</a></li>
+                                    <li><a href="#tab-103" data-toggle="tab">Music</a></li>
                                 </ul>
                                 <div class="tab-content">
                                     <div class="tab-pane in active" id="tab-101">
@@ -187,6 +188,21 @@
                                         <h3>Cold Coffee Drinks</h3>
                                         <ul>
                                             <li>- Dirty Horchata</li>
+                                        </ul>
+                                    </div>
+                                    <div class="tab-pane" id="tab-103">
+                                        <h3>Playlists</h3>
+                                        <ul>
+                                            <li>- Carole and Tuesday</li>
+                                            <li>- Naruto Shippuden Openings</li>
+                                            <li>- Coffee Shop Vibes</li>
+                                        </ul>
+
+                                        <h3>Artists</h3>
+                                        <ul>
+                                            <li>- Dicta License</li>
+                                            <li>- Malay</li>
+                                            <li>- Gwen Stefani</li>
                                         </ul>
                                     </div>
                                 </div>
