--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                                         <ul>
                                             <li>- Kenya</li>
                                             <li>- Kilimanjaro</li>
-                                            <li>- Colombia</li>
+                                            <li>- Colombia Supremo</li>
                                             <li>- Mt. Apo</li>
                                             <li>- Sagada</li>
                                         </ul>
