--- a/index.html
+++ b/index.html
@@ -159,6 +159,7 @@
                                     <li class="active"><a href="#tab-101" data-toggle="tab">Books</a></li>
                                     <li><a href="#tab-102" data-toggle="tab">Coffee</a></li>
                                     <li><a href="#tab-103" data-toggle="tab">Music</a></li>
+                                    <li><a href="#tab-104" data-toggle="tab">Podcasts</a></li>
                                 </ul>
                                 <div class="tab-content">
                                     <div class="tab-pane in active" id="tab-101">
@@ -203,6 +204,14 @@
                                             <li>- Dicta License</li>
                                             <li>- Malay</li>
                                             <li>- Gwen Stefani</li>
+                                        </ul>
+                                    </div>
+                                    <div class="tab-pane" id="tab-104">
+                                        <h3>Podcasts</h3>
+                                        <ul>
+                                            <li>- Talk Python to Me by Michael Kennedy</li>
+                                            <li>- Python Bytes by Brian Okken and Michael Kennedy</li>
+                                            <li>- Teaching Python by Kelly Paredes and Sean Tibor</li>
                                         </ul>
                                     </div>
                                 </div>
