--- a/index.html
+++ b/index.html
@@ -168,6 +168,7 @@
                                             <li>- Company of One by Paul Jarvis</li>
                                             <li>- The Dip: A Little Book That Teaches You When to Quit (and When to Stick) by Seth Godin</li>
                                             <li>- The Hard Thing About Hard Things by Ben Horowitz</li>
+                                            <li>- The Almanack of Naval Ravikant: A Guide to Wealth and Happiness by Eric Jorgenson</li>
                                         </ul>
 
                                         <h3>Tech</h3>
