--- a/index.html
+++ b/index.html
@@ -191,6 +191,7 @@
                                         <h3>Cold Coffee Drinks</h3>
                                         <ul>
                                             <li>- Dirty Horchata</li>
+                                            <li>- Black Sesame Latte</li>
                                         </ul>
                                     </div>
                                     <div class="tab-pane" id="tab-103">
