--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
     <head>
         <meta charset="UTF-8">
@@ -160,6 +160,7 @@
                                     <li><a href="#tab-102" data-toggle="tab">Coffee</a></li>
                                     <li><a href="#tab-103" data-toggle="tab">Music</a></li>
                                     <li><a href="#tab-104" data-toggle="tab">Podcasts</a></li>
+                                    <li><a href="#tab-105" data-toggle="tab">Tutorials</a></li>
                                 </ul>
                                 <div class="tab-content">
                                     <div class="tab-pane in active" id="tab-101">
@@ -215,6 +216,17 @@
                                             <li>- Talk Python to Me by Michael Kennedy</li>
                                             <li>- Python Bytes by Brian Okken and Michael Kennedy</li>
                                             <li>- Teaching Python by Kelly Paredes and Sean Tibor</li>
+                                        </ul>
+                                    </div>
+                                    <div class="tab-pane" id="tab-105">
+                                        <h3>Python</h3>
+                                        <ul>
+                                            <li>- <a href="https://www.py4e.com/lessons">Python for Everybody</a></li>
+                                        </ul>
+
+                                        <h3>Django</h3>
+                                        <ul>
+                                            <li>- <a href="https://tutorial.djangogirls.org">Django Girls Tutorial</a></li>
                                         </ul>
                                     </div>
                                 </div>
