Update homepage and talks

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                 </section>
                 <!-- Hello text end-->
                 <!-- Tabs-->
-                <section class="module">
+                <section class="module" id="life-work-community">
                     <div class="container-fluid container-custom">
                         <div class="row">
                             <div class="col-sm-12">
@@ -148,7 +148,7 @@
 
 
                 <!-- Tabs-->
-                <section class="module">
+                <section class="module" id="recommendations">
                     <div class="container-fluid container-custom">
                         <div class="row">
                             <div class="col-sm-12">
@@ -160,7 +160,7 @@
                                     <li><a href="#tab-102" data-toggle="tab">Coffee</a></li>
                                     <li><a href="#tab-103" data-toggle="tab">Music</a></li>
                                     <li><a href="#tab-104" data-toggle="tab">Podcasts</a></li>
-                                    <li><a href="#tab-105" data-toggle="tab">Tutorials</a></li>
+                                    <li><a href="#tab-105" data-toggle="tab">Developer Tools</a></li>
                                 </ul>
                                 <div class="tab-content">
                                     <div class="tab-pane in active" id="tab-101">
@@ -220,11 +220,16 @@
                                     </div>
                                     <div class="tab-pane" id="tab-105">
                                         <h3>Python</h3>
+                                        <p>Python is my programming language of choice for work and hobby projects because it's very powerful yet still simple, practical and fun to use.</p>
+                                        <p>For a start, if you want to learn it's basic syntax, you can follow these tutorials:</p>
                                         <ul>
+                                            <li>- <a href="talks-and-workshops.html#magic-carpet-python">A Magic Carpet Ride to Python</a></li>
                                             <li>- <a href="https://www.py4e.com/lessons">Python for Everybody</a></li>
                                         </ul>
 
                                         <h3>Django</h3>
+                                        <p>Django is my chosen web development framework because it allows me to build web apps from scratch faster. Also, when working with teams, I just find the code easier to maintain when I use it since the framework is very opinionated and has very good documentation.</p>
+                                        <p>For a start, if you want to learn how to build a simple web app using Django, you can follow this tutorial:</p>
                                         <ul>
                                             <li>- <a href="https://tutorial.djangogirls.org">Django Girls Tutorial</a></li>
                                         </ul>
