--- a/index.html
+++ b/index.html
@@ -219,20 +219,31 @@
                                         </ul>
                                     </div>
                                     <div class="tab-pane" id="tab-105">
-                                        <h3>Python</h3>
+                                        <h3>Programming Language: Python</h3>
                                         <p>Python is my programming language of choice for work and hobby projects because it's very powerful yet still simple, practical and fun to use.</p>
+                                        <p>I mainly use Python for web development and scripting.</p>
                                         <p>For a start, if you want to learn it's basic syntax, you can follow these tutorials:</p>
                                         <ul>
-                                            <li>- <a href="talks-and-workshops.html#magic-carpet-python">A Magic Carpet Ride to Python</a></li>
-                                            <li>- <a href="https://www.py4e.com/lessons">Python for Everybody</a></li>
+                                            <li>- <a href="talks-and-workshops.html#magic-carpet-python">A Magic Carpet Ride to Python</a> - 30-min to 1-hour quick introduction of what Python is and it's many possibilities + code labs and exercises for the very basic syntax.</li>
+                                            <li>- <a href="https://www.py4e.com/lessons">Python for Everybody</a> - if you want to take what you learned a little bit further.</li>
                                         </ul>
 
-                                        <h3>Django</h3>
-                                        <p>Django is my chosen web development framework because it allows me to build web apps from scratch faster. Also, when working with teams, I just find the code easier to maintain when I use it since the framework is very opinionated and has very good documentation.</p>
+                                        <h3>Web Development Framework: Django</h3>
+                                        <p>Django is my go-to web development framework because it allows me to build web apps from scratch faster. Also, when working with teams, I just find the code easier to maintain when I use it since the framework is very opinionated and has very good documentation.</p>
                                         <p>For a start, if you want to learn how to build a simple web app using Django, you can follow this tutorial:</p>
                                         <ul>
                                             <li>- <a href="https://tutorial.djangogirls.org">Django Girls Tutorial</a></li>
                                         </ul>
+
+                                        <h3>Text Editor: Sublime Text 3</h3>
+                                        <p>I don't use an IDE because I wanted to train myself to be productive without needing a "crutch". Vim is too hardcore for me so I chose Sublime Text instead - it's light and simple enough to have all the necessary stuff I need (syntax highlighting, translate tabs to spaces and set tabs to 4 spaces).</p>
+                                        <p>If you want to try using Sublime Text, you can download it from <a href="https://www.sublimetext.com">sublimetext.com</a></p>
+                                        <p>You can also copy my Sublime Text settings <a href="https://gist.github.com/codemickeycode/08bc31595ab65d8fbad4e7a0f0268c6b">here</a>.</p>
+
+                                        <h3>Operating System: Linux (Ubuntu)</h3>
+                                        <p>I've used Ubuntu for my dev machine since I started learning Python in 2012 because at that time, I found that most Python tutorials uses Linux in the examples.</p>
+                                        <p>I had to force myself to setup an Ubuntu VM so I can use it whenever I practice writing code in Python. Then eventually, I set it up as my main OS because my 3rd job required me to use an Ubuntu dev machine.</p>
+                                        <p>In the end, switching to Linux was a good thing because it forced me to be comfortable using the command-line.</p>
                                     </div>
                                 </div>
                                 <!-- END TABS-->
