--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
                                         <p>You can also copy my Sublime Text settings <a href="https://gist.github.com/codemickeycode/08bc31595ab65d8fbad4e7a0f0268c6b">here</a>.</p>
 
                                         <h3>Operating System: Linux (Ubuntu)</h3>
-                                        <p>I've used Ubuntu for my dev machine since I started learning Python in 2012 because at that time, I found that most Python tutorials uses Linux in the examples.</p>
+                                        <p>I've used Ubuntu for my dev machine since I started learning Python in 2012 because at that time, I found that most Python tutorials use Linux in the examples.</p>
                                         <p>I had to force myself to setup an Ubuntu VM so I can use it whenever I practice writing code in Python. Then eventually, I set it up as my main OS because my 3rd job required me to use an Ubuntu dev machine.</p>
                                         <p>In the end, switching to Linux was a good thing because it forced me to be comfortable using the command-line.</p>
                                     </div>
