--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
                                         <h3>Operating System: Linux (Ubuntu)</h3>
                                         <p>I've used Ubuntu for my dev machine since I started learning Python in 2012 because at that time, I found that most Python tutorials use Linux in the examples.</p>
                                         <p>I had to force myself to setup an Ubuntu VM so I can use it whenever I practice writing code in Python. Then eventually, I set it up as my main OS because my 3rd job required me to use an Ubuntu dev machine.</p>
-                                        <p>In the end, switching to Linux was a good thing because it forced me to be comfortable using the command-line.</p>
+                                        <p>In the end, switching to Linux was a good thing because it forced me to become comfortable using the command-line.</p>
                                     </div>
                                 </div>
                                 <!-- END TABS-->
