--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
                                         <h3>Programming Language: Python</h3>
                                         <p>Python is my programming language of choice for work and hobby projects because it's very powerful yet still simple, practical and fun to use.</p>
                                         <p>I mainly use Python for web development and scripting.</p>
-                                        <p>For a start, if you want to learn it's basic syntax, you can follow these tutorials:</p>
+                                        <p>For a start, if you want to learn its basic syntax, you can follow these tutorials:</p>
                                         <ul>
                                             <li>- <a href="talks-and-workshops.html#magic-carpet-python">A Magic Carpet Ride to Python</a> - 30-min to 1-hour quick introduction of what Python is and it's many possibilities + code labs and exercises for the very basic syntax.</li>
                                             <li>- <a href="https://www.py4e.com/lessons">Python for Everybody</a> - if you want to take what you learned a little bit further.</li>
