--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
                                             <li>- <a href="talks-and-workshops.html#magic-carpet-python">A Magic Carpet Ride to Python</a> - 30-min to 1-hour quick introduction of what Python is and it's many possibilities + code labs and exercises for the very basic syntax.</li>
                                             <li>- <a href="https://www.py4e.com/lessons">Python for Everybody</a> - if you want to take what you learned a little bit further.</li>
                                         </ul>
-                                        <p>You can check out this video - <a href="talks-and-workshops.html#top-concerns-of-python-beginners">Top Concerns of Python Beginners</a> if you're still trying to decide if Python is the right tool for you.</p>
+                                        <p>You can check out this video: <a href="talks-and-workshops.html#top-concerns-of-python-beginners">Top Concerns of Python Beginners</a> (Taglish) if you're still trying to decide if Python is the right tool for you.</p>
 
                                         <h3>Web Development Framework: Django</h3>
                                         <p>Django is my go-to web development framework because it allows me to build web apps from scratch faster. Also, when working with teams, I just find the code easier to maintain when I use it since the framework is very opinionated and has very good documentation.</p>
