--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
                                         <p>I mainly use Python for web development and scripting.</p>
                                         <p>For a start, if you want to learn its basic syntax, you can follow these tutorials:</p>
                                         <ul>
-                                            <li>- <a href="talks-and-workshops.html#magic-carpet-python">A Magic Carpet Ride to Python</a> - 30-min to 1-hour quick introduction of what Python is and it's many possibilities + code labs and exercises for the very basic syntax.</li>
+                                            <li>- <a href="talks-and-workshops.html#magic-carpet-python">A Magic Carpet Ride to Python</a> - 30-min to 1-hour quick introduction of what Python is and its many possibilities + code labs and exercises for the very basic syntax.</li>
                                             <li>- <a href="https://www.py4e.com/lessons">Python for Everybody</a> - if you want to take what you learned a little bit further.</li>
                                         </ul>
                                         <p>You can check out this video: <a href="talks-and-workshops.html#top-concerns-of-python-beginners">Top Concerns of Python Beginners</a> (Taglish) if you're still trying to decide if Python is the right tool for you.</p>
