--- a/index.html
+++ b/index.html
@@ -219,6 +219,15 @@
                                         </ul>
                                     </div>
                                     <div class="tab-pane" id="tab-105">
+                                        <p>
+                                            Before I start sharing my favorite dev tools and the reason behind why I've chosen these tools. I'd like to share these lines from the series "Arrow":
+                                            <ul>
+                                                <li>Oliver Queen : <i>Ray, when I'm out in the field, my bow, my arrows, those are just tools. I'm the weapon.</i></li>
+                                                <li>Ray Palmer : <i>That's poetic.</i></li>
+                                                <li>Oliver Queen : <i>My point is that if you rely on your suit more than you rely on yourself... it's going to get you killed.</i></li>
+                                            </ul>
+                                        </p>
+                                        </br>
                                         <h3>Programming Language: Python</h3>
                                         <p>Python is my programming language of choice for work and hobby projects because it's very powerful yet still simple, practical and fun to use.</p>
                                         <p>I mainly use Python for web development and scripting.</p>
