Update dev tools

--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
                                     </div>
                                     <div class="tab-pane" id="tab-105">
                                         <p>
-                                            Before I start sharing my favorite dev tools and the reason behind why I've chosen these tools. I'd like to share these lines from the series "Arrow":
+                                            Before I start sharing my favorite dev tools and the reason behind why I've chosen these tools, I'd like to share these lines from the series "Arrow":
                                             <ul>
                                                 <li>Oliver Queen : <i>Ray, when I'm out in the field, my bow, my arrows, those are just tools. I'm the weapon.</i></li>
                                                 <li>Ray Palmer : <i>That's poetic.</i></li>
