--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
                                         </ul>
 
                                         <h3>Text Editor: Sublime Text 3</h3>
-                                        <p>I don't use an IDE because I wanted to train myself to be productive without needing a "crutch". Vim is too hardcore for me so I chose Sublime Text instead - it's light and simple enough to have all the necessary stuff I need (syntax highlighting, translate tabs to spaces and set tabs to 4 spaces).</p>
+                                        <p>I don't use an IDE because I wanted to train myself to be productive without needing a "crutch". Vim is too hardcore for me so I chose Sublime Text instead - it's light and simple enough to have all the necessary stuff I need (syntax highlighting, set indentation (tab) to 4 spaces adn show whitespaces).</p>
                                         <p>If you want to try using Sublime Text, you can download it from <a href="https://www.sublimetext.com">sublimetext.com</a></p>
                                         <p>You can also copy my Sublime Text settings <a href="https://gist.github.com/codemickeycode/08bc31595ab65d8fbad4e7a0f0268c6b">here</a>.</p>
 
