--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
                                         <p>In the end, switching to Linux was a good thing because it forced me to become comfortable using the command-line.</p>
 
                                         <h3>Version Control SyGit</h3>
-                                        <p>I first discovered Git at PyCon Philippines 2012. I started using it ever since I started to collaborate with other people on PythonPH projects. This was also required on my 3rd job and onwards. It's a great tool!</p>
+                                        <p>I first discovered Git at PyCon Philippines 2012. I started using it ever since I started to collaborate with other people on PythonPH projects. This was also required at my 3rd job and onwards. It's a great tool!</p>
                                     </div>
                                 </div>
                                 <!-- END TABS-->
