--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
                                             </ul>
                                         </p>
                                         </br>
-                                        <h3>Programming Language: Python</h3>
+                                        <h3>Programming Language: Python (version 3.7 and above)</h3>
                                         <p>Python is my programming language of choice for work and hobby projects because it's very powerful yet still simple, practical and fun to use.</p>
                                         <p>I mainly use Python for web development and scripting.</p>
                                         <p>For a start, if you want to learn its basic syntax, you can follow these tutorials:</p>
