Update landing page

--- a/index.html
+++ b/index.html
@@ -196,11 +196,13 @@
                                         </ul>
                                     </div>
                                     <div class="tab-pane" id="tab-103">
-                                        <h3>Playlists</h3>
+                                        <h3>Playlists (on spotify)</h3>
                                         <ul>
                                             <li>- Carole and Tuesday</li>
                                             <li>- Naruto Shippuden Openings</li>
                                             <li>- Coffee Shop Vibes</li>
+                                            <li>- Lo-Fi Cafe</li>
+                                            <li>- This is Idealism</li>
                                         </ul>
 
                                         <h3>Artists</h3>
