Update landing page

--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                                         </ul>
                                     </div>
                                     <div class="tab-pane" id="tab-103">
-                                        <h3>Playlists (on spotify)</h3>
+                                        <h3>Playlists</h3>
                                         <ul>
                                             <li>- Carole and Tuesday</li>
                                             <li>- Naruto Shippuden Openings</li>
