--- a/index.html
+++ b/index.html
@@ -96,6 +96,17 @@
                         </div>
                     </div>
                 </section>
+                <section class="module">
+                    <div class="container-fluid container-custom">
+                        <div class="row">
+                            <div class="col-sm-12">
+                                <h2>The Future of Technology</h2>
+                                <hr class="m-b-50">
+                                <p>My dream for the future of technology is a future wherein humans have advanced greater than the advancement of technology. It's a future wherein technology has already become an extension of ourselves. Not a future wherein we're always overwhelmed by it.</p>
+                            </div>
+                        </div>
+                    </div>
+                </section>
                 <!-- Hello text end-->
                 <!-- Tabs-->
                 <section class="module" id="life-work-community">
