Update landing page

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                         </div>
                     </div>
                 </section>
-                <section class="module">
+                <section class="module" id="the-future-of-technology">
                     <div class="container-fluid container-custom">
                         <div class="row">
                             <div class="col-sm-12">
