--- a/index.html
+++ b/index.html
@@ -178,6 +178,7 @@
                                         <h3>Non-Tech</h3>
                                         <ul>
                                             <li>- Company of One by Paul Jarvis</li>
+                                            <li>- Ikigai: The Japanese Secret to a Long and Happy Life by Héctor García and Frances Miralles</li>
                                             <li>- The Dip: A Little Book That Teaches You When to Quit (and When to Stick) by Seth Godin</li>
                                             <li>- The Hard Thing About Hard Things by Ben Horowitz</li>
                                             <li>- The Almanack of Naval Ravikant: A Guide to Wealth and Happiness by Eric Jorgenson</li>
