Update landing page

--- a/index.html
+++ b/index.html
@@ -194,8 +194,11 @@
                                     <div class="tab-pane" id="tab-102">
                                         <h3>Beans</h3>
                                         <ul>
-                                            <li>- Kenya</li>
                                             <li>- Kilimanjaro</li>
+                                            <li>- Costa Rica</li>
+                                            <li>- Indonesia Kalosi</li>
+                                            <li>- Kenya</li>
+                                            <li>- Ethiopia Geisha</li>
                                             <li>- Colombia Supremo</li>
                                             <li>- Mt. Apo</li>
                                             <li>- Sagada</li>
