Update landing page and talks

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <div class="menu-table">
                 <div class="menu-table-cell">
                     <ul class="navigation">
-                        <li><a href="index.html">Profile</a></li>
+                        <li><a href="index.html">Home</a></li>
                         <li><a href="talks-and-workshops.html">Talks & Workshops</a></li>
 <!--                         <li><a href="resume.html">Resume</a></li>
                         <li><a href="portfolio.html">Portfolio</a></li>
@@ -68,7 +68,7 @@
             <section class="split-image parallax" data-background="assets/images/hero-image.jpg">
                 <div class="split-image-footer">
                     <ul class="split-list">
-                        <li><a href="talks-and-workshops.html">Python & Software Development</a></li>
+                        <li><a href="talks-and-workshops.html">Talks & Workshops</a></li>
                     </ul>
                 </div>
             </section>
