--- a/index.html
+++ b/index.html
@@ -81,13 +81,14 @@
                         <div class="row">
                             <div class="col-sm-12">
                                 <h1>Hello, I'm Micaela Reyes<br>Software Engineer</h1>
-                                <p>I'm a <strong>Software Engineer</strong> with 14 years of experience, the <strong>Director of Operations</strong> of the <strong><a href="https://python.ph">Python Philippines (PythonPH)</a></strong> community, and a <strong><a href="https://www.python.org/psf">Python Software Foundation</a> Fellow</strong>.</p>
+                                <p>I'm an Entrepreneur, Software Engineer and Tech Community Leader.</p>
 
-                                <p>
-                                As a software engineer, I've worked on telco systems, large-scale web applications, and various startup SaaS platforms. I specialize in <strong>backend and web development</strong> using <strong>Python</strong> and related technologies.
+                                <p>I currently run <a href="https://codehappy.ph"><strong>CodeHappy</strong></a>, a <strong>Python training company</strong> in the Philippines that teaches software engineering to tech professionals and leaders.</a>
                                 </p>
 
-                                <p>I currently work as a <strong>Python Trainer and Consultant</strong> at <strong><a href="https://codehappy.ph">CodeHappy.ph</a></strong>.
+                                <p>
+                                Along with that, I've been a <strong>software engineer for more than a decade</strong>. I've worked with various types of projects and have used multiple programming languages. I specialize in <strong>back-end and web development</strong> using <strong>Python</strong> and related technologies.
+                                </p>
 
                                 <p>
                                 I consider myself a realist idealist. I love to defy the odds for the things I truly care about.
