--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                                 </p>
 
                                 <p>
-                                Along with that, I've been a <strong>software engineer for more than a decade</strong>. I've worked with various types of projects and have used multiple programming languages. I specialize in <strong>back-end and web development</strong> using <strong>Python</strong> and related technologies.
+                                Along with that, I've been a <strong>software engineer for more than a decade</strong>. I've worked with various types of projects and have used multiple programming languages. I <strong>specialize in back-end and web development</strong> using <strong>Python</strong> and related technologies.
                                 </p>
 
                                 <p>
