--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                                         <p>Fun fact: I'm an introvert but I love having friends. I love meeting people who are passionate about their craft, getting inspired and learning something from them.</p>
                                     </div>
                                     <div class="tab-pane"  id="tab-2">
-                                        <p>I'm on a personal mission to teach Programming and Software Development to hone skills for the future generation of Tech Professionals and Tech Community Leaders in the Philippines.
+                                        <p>I'm on a personal mission to teach Programming and Software Development for the future generation of tech professionals and leaders in the Philippines.
                                         </p>
                                         <p>
                                         So together with my husband, I started a Python training company called CodeHappy. I believe this is one area of focus where I'm able to do just that while promoting software craftsmanship and fostering healthy engineering cultures. :)
