--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                                 </p>
 
                                 <p>
-                                Along with that, I've been a <strong>software engineer for more than a decade</strong>. I've worked with various types of projects and have used multiple programming languages. I <strong>specialize in back-end and web development</strong> using <strong>Python</strong> and related technologies.
+                                Along with that, I've been a <strong>software engineer for more than a decade</strong>. I've worked with various types of projects and have used multiple programming languages prior to specializing in Python.
                                 </p>
 
                                 <p>
@@ -136,7 +136,7 @@
                                         </p>
                                     </div>
                                     <div class="tab-pane" id="tab-3">
-                                        <p>I love creating "safe spaces" outside the capitalistic world where people get to do things that feed their souls and bond with other humans.
+                                        <p>I love creating "safe spaces" where people get to do things that feed their souls and bond with other humans.
                                         </p>
                                         <p>
                                         I also like contributing to causes I care about in my small corner of the world in the most practical way I can.
