Update landing page and talks

--- a/index.html
+++ b/index.html
@@ -91,8 +91,12 @@
                                 </p>
 
                                 <p>
-                                I consider myself a realist idealist. I love to defy the odds for the things I truly care about.
+                                I'm also a community leader for <a href="https://python.ph"><strong>Python Philippines (PythonPH) </strong></a>and a Python Software Foundation Fellow
                                 </p>
+
+<!--                                 <p>
+                                I consider myself a realist idealist. I love to defy the odds for the things I truly care about.
+                                </p> -->
                             </div>
                         </div>
                     </div>
@@ -169,10 +173,10 @@
                                 <!-- Tabs-->
                                 <ul class="nav nav-tabs">
                                     <li class="active"><a href="#tab-101" data-toggle="tab">Books</a></li>
+                                    <li><a href="#tab-105" data-toggle="tab"></a></li>
                                     <li><a href="#tab-102" data-toggle="tab">Coffee</a></li>
                                     <li><a href="#tab-103" data-toggle="tab">Music</a></li>
                                     <li><a href="#tab-104" data-toggle="tab">Podcasts</a></li>
-                                    <li><a href="#tab-105" data-toggle="tab">Developer Tools</a></li>
                                 </ul>
                                 <div class="tab-content">
                                     <div class="tab-pane in active" id="tab-101">
