--- a/index.html
+++ b/index.html
@@ -173,10 +173,10 @@
                                 <!-- Tabs-->
                                 <ul class="nav nav-tabs">
                                     <li class="active"><a href="#tab-101" data-toggle="tab">Books</a></li>
-                                    <li><a href="#tab-105" data-toggle="tab"></a></li>
                                     <li><a href="#tab-102" data-toggle="tab">Coffee</a></li>
                                     <li><a href="#tab-103" data-toggle="tab">Music</a></li>
                                     <li><a href="#tab-104" data-toggle="tab">Podcasts</a></li>
+                                    <li><a href="#tab-105" data-toggle="tab">Developer Tools</a></li>
                                 </ul>
                                 <div class="tab-content">
                                     <div class="tab-pane in active" id="tab-101">
