Update books and coffee beans

--- a/index.html
+++ b/index.html
@@ -182,12 +182,14 @@
                                     <div class="tab-pane in active" id="tab-101">
                                         <h3>Non-Tech</h3>
                                         <ul>
-                                            <li>- Company of One by Paul Jarvis</li>
+                                            <li>- Essentialism by Greg McKeown</li>
                                             <li>- Ikigai: The Japanese Secret to a Long and Happy Life by Héctor García and Frances Miralles</li>
+                                            <li>- Company of One by Paul Jarvis</li>
                                             <li>- The Dip: A Little Book That Teaches You When to Quit (and When to Stick) by Seth Godin</li>
                                             <li>- The Hard Thing About Hard Things by Ben Horowitz</li>
-                                            <li>- The Almanack of Naval Ravikant: A Guide to Wealth and Happiness by Eric Jorgenson</li>
+                                            <li>- Invest Your Way to Financial Freedom: A simple guide to everything you need to know by Ben Carlson and Robin Powell</li>
                                             <li>- The Simple Path to Wealth by JL Collins</li>
+                                            <li>- The Almanack of Naval Ravikant: A Guide to Wealth and Happiness by Eric Jorgenson</li>
                                         </ul>
 
                                         <h3>Tech</h3>
@@ -203,6 +205,7 @@
                                             <li>- Kilimanjaro</li>
                                             <li>- Costa Rica</li>
                                             <li>- Indonesia Kalosi</li>
+                                            <li>- Indian Monsoon</li>
                                             <li>- Ethiopia Geisha</li>
                                             <li>- Colombia Supremo</li>
                                             <li>- Mt. Apo</li>
