--- a/index.html
+++ b/index.html
@@ -81,6 +81,9 @@
                         <div class="row">
                             <div class="col-sm-12">
                                 <h1>Hello, I'm Micaela Reyes<br>Software Engineer</h1>
+
+                                <p><strong><i>Code. Passion. Freedom. Making a Difference.</i></strong></p>
+
                                 <p>I'm an Entrepreneur, Software Engineer and Tech Community Leader.</p>
 
                                 <p>I currently run <a href="https://codehappy.ph"><strong>CodeHappy</strong></a>, a grassroots<strong> Python training company</strong> in the Philippines that teaches core and industry-relevant software engineering skills to tech professionals and leaders.</a>
