Update about me section

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                                 </p>
 
                                 <p>
-                                I'm also a community leader for <a href="https://python.ph"><strong>Python Philippines (PythonPH) </strong></a>and a Python Software Foundation Fellow
+                                As the Director of Operations for <a href="https://python.ph"><strong>Python Philippines (PythonPH) </strong></a>and a Python Software Foundation Fellow, I actively contribute to the Python community and its growth.
                                 </p>
 
                                 <p>
